2005-05-11  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_INIT_PARSE_ARGS): Make the check
	  for absolute directory names in one loop.
	* lib/autoconf/status.m4 (_AC_OUTPUT_CONFIG_STATUS): Handle
	  abbreviations of --version and --debug.

2005-05-10  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Autoconf Language): Be more precise about
	quoting rules.  Problems noted by Stepan Kasal.
	Also, throughout this document, be more careful about white space.
	"blank", "white space", and "space" all have different meanings
	and we should be careful to say what we mean.

2005-05-05  Paul Eggert  <eggert@cs.ucla.edu>

	Fix C++ related problems reported by Werner Lemberg.
	* doc/autoconf.texi (C++ Compiler): Mention .cpp extension.
	* lib/autoconf/c.m4 (AC_LANG(C++)): Set ac_ext to .cpp, not .cc.
	* lib/autoconf/types.m4 (AC_TYPE_SIGNAL): Simplify test, to
	avoid problems with C++ and throw.
	* tests/compile.at: .cpp, not .cc.

	* tests/semantics.at: Prepend LIBOBJDIR, as per 2005-05-02 change.

2005-05-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Generic Functions): Typos.

2005-05-02  Gary V. Vaughan  <gary@gnu.org>

	* lib/autoconf/general.m4 (_AC_LIBOBJS_NORMALIZE): Prepend each
	object named in LIBOBJS and LTLIBOBJS with the ${LIBOBJDIR}, as
	set by latest automake.

2005-05-01  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Limitations of Usual Tools): "expr '' \| ''"
	outputs 0 on GNU/Linux these days.

2005-04-29  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Autoconf Language): Add more description
	about quoting heuristics.
	(Limitations of Builtins): Describe "set -" problems.

2005-04-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autotest/general.m4 (AT_KEYWORDS): Separate by space,
	not newline.

	* doc/autoconf.texi (External Software): Replace AC_DEFINE_UNQUOTED
	by AC_DEFINE; it was a mistake.
	From bug reported against libtool by Dalibor Topic <robilad@kaffe.org>.
